--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero" alt="group discussing iver conference table"></div>
+    <section class="hero" alt="group discussing over conference table"></section>
     <main class="content">
         <section id="search-engine-optimization"
         class="search-engine-optimization">
